--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200;1,500;1,600;1,700;1,800;1,900&display=swap"
  rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="assets/css/main.css">
+    <link rel="stylesheet" href="main.css">
 </head>
 <body>
     <section><!--HeaderSection-->
@@ -45,21 +45,27 @@
             </div>
 
         </nav>
+
     </section><!--HeaderSection Ends-->
 
-    <section><!--Primary-->
-        <banner class="banner1">
-            <h1>Laundry Services</h1>
-            <p>We care for the cloth you wear</p>
-            <button>Order Now</button>
-        </banner>
-
+    <section class="banner_flex"><!--Primary-->
+        <div class="primary_banner">
+            <banner class="banner1">
+                <h1>Laundry Services</h1>
+                <p>We care for the cloth you wear</p>
+                <button>Order Now</button>
+            </banner>
+        </div>
+        <div class="primary_banner1">
         <banner class="banner2">
-            <h1>Dry Cleaning</h1>
-            <p>Cleaning Excellence Guaranteed!</p>
-            <button>Order Now</button>
-        </banner>
+                <h1>Dry Cleaning</h1>
+                <p>Cleaning Excellence Guaranteed!</p>
+                <button>Order Now</button>
+            </banner>
+        </div>
     </section><!--Primary Ends-->
+
+
 
     <section><!--Secondary-->
 
@@ -74,6 +80,6 @@
     <!--===========
     Javacript Files
     ===================-->
-    <script src="assets/js/navigation.js"></script>
+    <script src="assets/j/navigation.js"></script>
 </body>
 </html>
