--- a/index.html
+++ b/index.html
@@ -80,6 +80,6 @@
     <!--===========
     Javacript Files
     ===================-->
-    <script src="assets/j/navigation.js"></script>
+    <script src="assets/js/navigation.js"></script>
 </body>
 </html>
