--- a/index.html
+++ b/index.html
@@ -81,5 +81,7 @@
     Javacript Files
     ===================-->
     <script src="assets/js/navigation.js"></script>
+    <script src="assets/js/slide.js"></script>
+    <script src="assets/js/ent.js"></script>
 </body>
 </html>
