--- a/index.html
+++ b/index.html
@@ -67,7 +67,37 @@
 
 
 
-    <section><!--Secondary-->
+    <section class="secondary"><!--Secondary-->
+        <div class="experience_mobile">
+            <p>More than 10 years of Experience</p>
+            <h1>We are Passionate About Laundry</h1>
+        </div>
+
+        <div class="exp">
+            <img src="images/Blue Coats.jpg" alt="Experience Pic">
+        </div>
+
+        <div class="num_circle">
+            <p>10<br> <span>Years of<br>Experience</span></p>
+        </div>
+
+
+        <div class="experience_desktop">
+            <p>More than 10 years of Experience</p>
+            <h1>We are Passionate About Laundry</h1>
+
+            <h5>We are professionals in the laundry and dry cleaning business, 
+                which means we always stay up to date on the latest technologies,
+                 cleaning methods, and solutions for dealing with stains
+                  or delicate fabrics. Plus, we maintain the
+                   highest standards of business
+                  integrity by following local and national 
+                  regulations and environmental safety rules.
+                 We are passionate about the way you think about laundry!</h5>
+        </div>
+
+
+
 
     </section><!--Secondary Ends-->
 
