Try phone number

--- a/index.html
+++ b/index.html
@@ -93,7 +93,28 @@
                    highest standards of business
                   integrity by following local and national 
                   regulations and environmental safety rules.
-                 We are passionate about the way you think about laundry!</h5>
+                 We are passionate about the way you think about laundry!
+            </h5>
+
+            <div class="customers_list">
+                <ul>
+                    <li>100% Customer Satisfaction</li>
+                    <li>Free Collection & Delivery</li>
+                    <li>Affordable Prices</li>
+                    <li>Best Quality</li>
+                </ul>
+
+                <div class="phone_number">
+                   <a href="tel:+2348168923580"><i class="fa fa-phone"></i></a> 
+
+                    <a href="tel:+2348168923580"><h4>Call for Quality Services<br>
+                    <span>+234 81 689 235 80</span></h4></a>
+                </div>
+               
+            </div>
+
+
+
         </div>
 
 
