--- a/index.html
+++ b/index.html
@@ -112,18 +112,38 @@
                 </div>
                
             </div>
-
-
-
         </div>
-
-
-
-
     </section><!--Secondary Ends-->
 
-    <section><!--Tertiary Section-->
 
+
+    <section class="tertiary"><!--Tertiary Section-->
+        <div class="wrap">
+            <div class="note">
+                <h1>Save Time & Money</h1>
+                <p>No more wasted time driving to the 
+                    laundromats,we pickup and deliver for free!
+                </p>
+            </div>
+        </div>
+
+        <div class="wrap">
+            <div class="note">
+                <h1>Pay Online in Seconds</h1>
+                <p>Mange your press account and billing Online
+                    from your smartphone or computer.
+                </p>
+            </div>
+        </div>
+
+        <div class="wrap">
+            <div class="note">
+                <h1>Eco-Friendly</h1>
+                <p>We use safe and clean prec-free solvents,so you,and the Earth 
+                    can look good.
+                </p>
+            </div>
+        </div>
     </section><!--Tertiary Ends-->
 
 
