--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
             <div class="shopping_flex"><!--Shopping & Cart-->
                 <div class="icons">
-                    <i class="fa fa-shopping-cart"></i>
+                    <i class="fa fa-opencart"></i>
                 </div>
 
                 <div class="schedule">
@@ -128,7 +128,7 @@
         </div>
 
         <div class="wrap">
-            <div class="note">
+            <div class="note1">
                 <h1>Pay Online in Seconds</h1>
                 <p>Mange your press account and billing Online
                     from your smartphone or computer.
@@ -137,7 +137,7 @@
         </div>
 
         <div class="wrap">
-            <div class="note">
+            <div class="note2">
                 <h1>Eco-Friendly</h1>
                 <p>We use safe and clean prec-free solvents,so you,and the Earth 
                     can look good.
