--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             </div>
         </div>
 
-        <div class="wrap">
+        <div class="wrap1">
             <div class="note1">
                 <h1>Pay Online in Seconds</h1>
                 <p>Mange your press account and billing Online
@@ -136,7 +136,7 @@
             </div>
         </div>
 
-        <div class="wrap">
+        <div class="wrap2">
             <div class="note2">
                 <h1>Eco-Friendly</h1>
                 <p>We use safe and clean prec-free solvents,so you,and the Earth 
