--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
  rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="main.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 </head>
 <body>
     <section><!--HeaderSection-->
@@ -118,7 +119,7 @@
 
 
     <section class="tertiary"><!--Tertiary Section-->
-        <div class="wrap">
+        <div class="wrap slides">
             <div class="note">
                 <h1>Save Time & Money</h1>
                 <p>No more wasted time driving to the 
@@ -127,7 +128,7 @@
             </div>
         </div>
 
-        <div class="wrap1">
+        <div class="wrap1 slides">
             <div class="note1">
                 <h1>Pay Online in Seconds</h1>
                 <p>Mange your press account and billing Online
@@ -136,7 +137,7 @@
             </div>
         </div>
 
-        <div class="wrap2">
+        <div class="wrap2 slides">
             <div class="note2">
                 <h1>Eco-Friendly</h1>
                 <p>We use safe and clean prec-free solvents,so you,and the Earth 
@@ -145,6 +146,12 @@
             </div>
         </div>
     </section><!--Tertiary Ends-->
+    
+    <div id="dot">
+        <span class="dot"></span>
+        <span class="dot"></span>
+        <span class="dot"></span>
+    </div>
 
 
 
