--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
  rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="assets/css/googleicon.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 </head>
 <body>
@@ -156,12 +159,32 @@
     </div>
 
 
+    <section class="tilt">
+        <div class="tilt_child">
+            <p>[Our Services]</p>
+            <h1>Dry Cleaning & Laundry,<br>
+                Free Delivery</h1>
+        </div>
+        <div class="service_section">
+            <div class="service_img">
+                <img src="images/Repair Steaches.jpg" alt="">
+            </div>
+
+            <div class="service_icon">
+                <span class="material-icons-outlined yellow">trending_up</span>
+            </div>
+
+
+        </div>
+    </section>
+
+
 
     <!--===========
     Javacript Files
     ===================-->
     <script src="assets/js/navigation.js"></script>
     <script src="assets/js/slide.js"></script>
-    <script src="assets/js/ent.js"></script>
+    <script src="assets/js/auto.js"></script>
 </body>
 </html>
