--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
     <section class="tilt">
         <div class="tilt_child">
-            <p>[Our Services]</p>
+            <p>[ Our Services ]</p>
             <h1>Dry Cleaning & Laundry,<br>
                 Free Delivery</h1>
         </div>
@@ -170,8 +170,17 @@
                 <img src="images/Repair Steaches.jpg" alt="">
             </div>
 
-            <div class="service_icon">
-                <span class="material-icons-outlined yellow">trending_up</span>
+            <div class="this_man">
+                <div class="service_icon">
+                    <span class="material-icons-outlined">emoji_nature</span>
+                </div>
+
+                <div class="statement">
+                    <h4>Alternations & Repairs</h4>
+                    <p>We have expert seamstress and tailors <br> on staff to ensure
+                        we meet and exceeds <br> your fitting requirements.
+                    </p>
+                </div>
             </div>
 
 
