--- a/index.html
+++ b/index.html
@@ -159,12 +159,16 @@
     </div>
 
 
+
+    <div class="tilt_child">
+        <p>[ Our Services ]</p>
+        <h1>Dry Cleaning & Laundry,<br>
+            Free Delivery</h1>
+    </div>
+
+
     <section class="tilt">
-        <div class="tilt_child">
-            <p>[ Our Services ]</p>
-            <h1>Dry Cleaning & Laundry,<br>
-                Free Delivery</h1>
-        </div>
+       
         <div class="service_section">
             <div class="service_img">
                 <img src="images/Repair Steaches.jpg" alt="">
@@ -182,8 +186,43 @@
                     </p>
                 </div>
             </div>
+        </div>
+        
+        <div class="service_section">
+            <div class="service_img">
+                <img src="images/ironing.jpg" alt="">
+            </div>
 
+            <div class="this_man">
+                <div class="service_icon">
+                    <span class="material-icons-outlined">emoji_nature</span>
+                </div>
 
+                <div class="statement">
+                    <h4>Alternations & Repairs</h4>
+                    <p>We have expert seamstress and tailors <br> on staff to ensure
+                        we meet and exceeds <br> your fitting requirements.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <div class="service_section">
+            <div class="service_img">
+                <img src="images/Polish Shoes.jpg" alt="">
+            </div>
+
+            <div class="this_man">
+                <div class="service_icon">
+                    <span class="material-icons-outlined">emoji_nature</span>
+                </div>
+
+                <div class="statement">
+                    <h4>Alternations & Repairs</h4>
+                    <p>We have expert seamstress and tailors <br> on staff to ensure
+                        we meet and exceeds <br> your fitting requirements.
+                    </p>
+                </div>
+            </div>
         </div>
     </section>
 
