--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
         </div>
 
         <div class="service_section">
-            <div class="this_man">
+            <div class="this_man man2">
                 <div class="service_icon">
                     <span class="material-icons-outlined">emoji_nature</span>
                 </div>
