Testing the Slider on Mobile

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
 
     <section class="tertiary"><!--Tertiary Section-->
-        <div class="wrap slides owl-carousel1">
+        <div class="wrap slides">
             <div class="note">
                 <h1>Save Time & Money</h1>
                 <p>No more wasted time driving to the 
@@ -249,9 +249,10 @@
 
 
        <script>
+           
            $(document).ready(function(){
                $(".carousel").owlCarousel({
-                margin: 10,
+                // margin: 10,
                 loop: true,
                 autoplay:true,
                 autoplayTimeout: 4000,
