--- a/index.html
+++ b/index.html
@@ -253,13 +253,14 @@
            $(document).ready(function(){
                $(".carousel").owlCarousel({
                 // margin: 10,
+                nav: true,
                 loop: true,
                 autoplay:true,
                 autoplayTimeout: 4000,
                 autoplayHoverPause:true,
                 responsive: {
                     0:{
-                        items:0,
+                        items:1,
                         nav: false
                     },
                     600:{
