--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
            
            $(document).ready(function(){
                $(".carousel").owlCarousel({
-                // margin: 10,
+                margin: 10,
                 nav: true,
                 loop: true,
                 autoplay:true,
