--- a/index.html
+++ b/index.html
@@ -248,6 +248,33 @@
 
 
 
+
+    <section class="four_icon-section">
+        <div class="box">
+            <div>
+                <p>[ Get Your Clothes Collected & Delivered ]</p>
+                <h5>Our Service is dedicated to making your life 
+                    easier by providing pick up laundry service.
+                     Give yourself one less thing to worry about and 
+                     try our residential wash and fold service that 
+                     includes pick up and delivery.
+                    <br>
+                    <br>
+                    We have been in the laundry business
+                     for more than 12 years and would love
+                      to earn your business. Try us today and
+                       save $10 Off your first laundry service
+                        of 20 pounds or more.
+                </h5>
+            </div>
+
+
+            
+        </div>
+    </section>
+
+
+
        <script>
            
            $(document).ready(function(){
