You fit kill my Vibe

--- a/index.html
+++ b/index.html
@@ -249,10 +249,11 @@
 
 
 
-    <section class="four_icon-section">
+    <section class="four_icon-section container">
         <div class="box">
-            <div>
+            <div class="note-on-Delivery">
                 <p>[ Get Your Clothes Collected & Delivered ]</p>
+                <h2>How We Work</h2>
                 <h5>Our Service is dedicated to making your life 
                     easier by providing pick up laundry service.
                      Give yourself one less thing to worry about and 
@@ -266,10 +267,30 @@
                        save $10 Off your first laundry service
                         of 20 pounds or more.
                 </h5>
+
+                <a href=""><button>Get Service Now</button></a>
             </div>
 
 
-            
+            <div class="short_clip">
+                <div class="big-number-circle">
+                    <strong>01</strong>
+                    <div class="circle-img">
+                        <img src="images/LaundryBus.png" alt="">
+                        <div>
+                        <h3>We <span>Pick Up</span>your Clothes</h3>
+                        <p>Morning of your Pick Up ,Leave your Bag at the designated 
+                            pick up location by 8:00am and for the driver to pick up
+                        </p>
+                        </div>
+                    </div>
+                </div>
+
+
+            </div>
+
+
+
         </div>
     </section>
 
