--- a/index.html
+++ b/index.html
@@ -286,7 +286,44 @@
                     </div>
                 </div>
 
+                <div class="big-number-circle">
+                    <strong>01</strong>
+                    <div class="circle-img">
+                        <img src="images/LaundryBus.png" alt="">
+                        <div class="Pck">
+                        <h3>We <span>Pick Up</span> your Clothes</h3>
+                        <p>Morning of your Pick Up ,Leave your Bag at the designated 
+                            pick up location by 8:00am and for the driver to pick up
+                        </p>
+                        </div>
+                    </div>
+                </div>
 
+                <div class="big-number-circle">
+                    <strong>01</strong>
+                    <div class="circle-img">
+                        <img src="images/LaundryBus.png" alt="">
+                        <div class="Pck">
+                        <h3>We <span>Pick Up</span> your Clothes</h3>
+                        <p>Morning of your Pick Up ,Leave your Bag at the designated 
+                            pick up location by 8:00am and for the driver to pick up
+                        </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="big-number-circle">
+                    <strong>01</strong>
+                    <div class="circle-img">
+                        <img src="images/LaundryBus.png" alt="">
+                        <div class="Pck">
+                        <h3>We <span>Pick Up</span> your Clothes</h3>
+                        <p>Morning of your Pick Up ,Leave your Bag at the designated 
+                            pick up location by 8:00am and for the driver to pick up
+                        </p>
+                        </div>
+                    </div>
+                </div>
             </div>
 
 
