--- a/index.html
+++ b/index.html
@@ -286,48 +286,58 @@
                     </div>
                 </div>
 
-                <div class="big-number-circle">
-                    <strong>01</strong>
+                <div class="big-number-circle zombie">
+                    <strong>02</strong>
                     <div class="circle-img">
-                        <img src="images/LaundryBus.png" alt="">
+                        <img src="images/PackCloth.png" alt="">
                         <div class="Pck">
-                        <h3>We <span>Pick Up</span> your Clothes</h3>
-                        <p>Morning of your Pick Up ,Leave your Bag at the designated 
-                            pick up location by 8:00am and for the driver to pick up
+                            <h3> <span>Bag Up</span> all your Clothes</h3>
+                        <p>
+                            We are pleased to pickup your
+                            laundry and ensure that it is expertly laundered and pressed.
                         </p>
                         </div>
                     </div>
                 </div>
 
-                <div class="big-number-circle">
-                    <strong>01</strong>
+                <div class="big-number-circle zombie">
+                    <strong>03</strong>
                     <div class="circle-img">
-                        <img src="images/LaundryBus.png" alt="">
+                        <img src="images/HangWell.png" alt="">
                         <div class="Pck">
-                        <h3>We <span>Pick Up</span> your Clothes</h3>
-                        <p>Morning of your Pick Up ,Leave your Bag at the designated 
-                            pick up location by 8:00am and for the driver to pick up
+                        <h3>We <span>Deliver</span> Clean Folded Clothes</h3>
+                        <p>
+                            We’ll deliver your pristine garments back to you, anytime and anywhere
                         </p>
                         </div>
                     </div>
                 </div>
 
-                <div class="big-number-circle">
-                    <strong>01</strong>
+                <div class="big-number-circle zombie">
+                    <strong>04</strong>
                     <div class="circle-img">
-                        <img src="images/LaundryBus.png" alt="">
+                        <img src="images/WeWash.png" alt="">
                         <div class="Pck">
-                        <h3>We <span>Pick Up</span> your Clothes</h3>
-                        <p>Morning of your Pick Up ,Leave your Bag at the designated 
-                            pick up location by 8:00am and for the driver to pick up
+                        <h3>We <span>Clean</span> your Clothes</h3>
+                        <p>Our Facilities are so good,We guarantee you'll be
+                            satisfied.We put a quality guarantee on all items.
                         </p>
                         </div>
                     </div>
+                </div>
+
+                <div class="switch">
+                    <ul class="progress">
+                        <li class="circle on">1</li>
+                        <li class="circle">2</li>
+                        <li class="circle">3</li>
+                        <li class="circle">4</li>
+                    </ul>
                 </div>
             </div>
 
 
-
+            
         </div>
     </section>
 
