--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
 
 
             <div class="short_clip">
-                <div class="big-number-circle" id="first">
+                <div class="big-number-circle">
                     <strong>01</strong>
                     <div class="circle-img">
                         <img src="images/LaundryBus.png" alt="">
@@ -286,9 +286,9 @@
                     </div>
                 </div>
 
-                <div class="big-number-circle zombie" id="second">
+                <div class="big-number-circle zombie">
                     <strong>02</strong>
-                    <div class="circle-img">
+                    <div class="circle-img invade">
                         <img src="images/PackCloth.png" alt="">
                         <div class="Pck">
                             <h3> <span>Bag Up</span> all your Clothes</h3>
@@ -302,7 +302,7 @@
 
                 <div class="big-number-circle zombie" id="third">
                     <strong>03</strong>
-                    <div class="circle-img">
+                    <div class="circle-img invade">
                         <img src="images/HangWell.png" alt="">
                         <div class="Pck">
                         <h3>We <span>Deliver</span> Clean Folded Clothes</h3>
@@ -313,9 +313,9 @@
                     </div>
                 </div>
 
-                <div class="big-number-circle zombie" id="forth">
+                <div class="big-number-circle zombie">
                     <strong>04</strong>
-                    <div class="circle-img">
+                    <div class="circle-img invade">
                         <img src="images/WeWash.png" alt="">
                         <div class="Pck">
                         <h3>We <span>Clean</span> your Clothes</h3>
