--- a/index.html
+++ b/index.html
@@ -336,9 +336,9 @@
                     </ul>
                 </div>
 
-                <div> 
-                    <button id="prev" onclick="back();">Prev</button>
-                    <button id="next" onclick="shown();">Next</button>
+                <div class="switch-class"> 
+                    <button id="prev" onclick="back();"></button>
+                    <button id="next" onclick="shown();"></button>
                 </div>
             </div>
 
