--- a/index.html
+++ b/index.html
@@ -350,6 +350,37 @@
         <div class="machine">
             <img src="images/alexandra-poliakova-EXCroywwrEw-unsplash.jpg" alt="">
         </div>
+
+        <div class="content-upon-washing-machine">
+            <p>[ Laundry service for your business! ]</p>
+            <h1>Commercial Laundry
+                Service
+            </h1>
+
+            <h5>Large corporations have determined that there is a financial
+                benefit to outsourcing back office work because it saves money.
+                Allowing us to do your laundry is cost effective and
+                will allow you and your employees to focus on your core business.
+                We offer smart solutions to meet your commercial laundry needs.
+                Our Commercial Laundry Clients include:
+            </h5>
+
+            <div class="col-list">
+                <ul class="col-list1">
+                    <li>Salons & Spas</li>
+                    <li>Restaurants and Caterers</li>
+                    <li>Religious Organizations</li>
+                    <li>Daycare centers</li>
+                </ul>
+
+                <ul class="col-list1">
+                    <li>Assisted Living / Nursing Homes</li>
+                    <li>Hotels & Motels</li>
+                    <li>Nail Salons</li>
+                    <li>Athletic Facilities / Gyms</li>
+                </ul>
+            </div>
+        </div>
     </section>
 
        <script>
