--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
                 </ul>
 
                 <ul class="col-list1">
-                    <li>Assisted Living / Nursing Homes</li>
+                    <li>Assisted Living / Nursing</li>
                     <li>Hotels & Motels</li>
                     <li>Nail Salons</li>
                     <li>Athletic Facilities / Gyms</li>
