--- a/index.html
+++ b/index.html
@@ -383,6 +383,33 @@
         </div>
     </section>
 
+
+
+        <section class="container">
+            <div class="first-head">
+                <p>[ Important Information ]</p>
+                <h1>Trusted Laundry Service</h1>
+            </div>
+
+            <div class="the-switch-button">
+                <button class="fancy-button">Our Approach</button>
+                <button class="fancy-button">Questions/Answer</button>
+                <button class="fancy-button">Why Choose Us</button>
+            </div>
+        </section>
+
+
+
+
+
+
+
+
+
+
+    <!-- =============
+    CAROUSEL SCRIPT...
+    ===================-->
        <script>
            
            $(document).ready(function(){
