--- a/index.html
+++ b/index.html
@@ -393,8 +393,37 @@
 
             <div class="the-switch-button">
                 <button class="fancy-button">Our Approach</button>
-                <button class="fancy-button">Questions/Answer</button>
-                <button class="fancy-button">Why Choose Us</button>
+                <button class="fancy-button1">Questions/Answer</button>
+                <button class="fancy-button2">Why Choose Us</button>
+            </div>
+
+            <div class="empty-div"></div>
+
+            <div class="video-text">
+                <div class="our-approach-div">
+                    <h2>Our Approach</h2>
+                    <p>We approach workforce accommodations with a property
+                        development mindset. Our “Develop. Own. Operate.”
+                        business model produces integrated
+                        solutions that enable clients to focus on
+                        their core business.
+                        <br>
+                        <br>
+                        Clients benefit from consistent service delivery
+                        with greater cost and quality control
+                        as well as more efficient use of their 
+                        operational and financial resources.
+                    </p>
+                </div>
+
+                <div class="video" id="videoClass">
+                    <video poster="images/engin-akyurt-yCYVV8-kQNM-unsplash.jpg" id="myVideo" controls>
+                        <source src="video/SHow-reel.mp4" type="video/mp4">
+                    </video>
+                    <div class="play-box">
+                   
+                    </div>
+                </div>
             </div>
         </section>
 
@@ -448,5 +477,6 @@
     <script src="assets/js/auto.js"></script>
     <script src="assets/js/big_page.js"></script>
     <script src="assets/js/int_change.js"></script>
+    <script src="assets/js/video.js"></script>
 </body>
 </html>
