Render for the day

--- a/index.html
+++ b/index.html
@@ -417,9 +417,9 @@
                 </div>
 
                 <div class="video" id="videoClass">
-                    <video poster="images/engin-akyurt-yCYVV8-kQNM-unsplash.jpg" id="myVideo" controls>
-                        <source src="video/SHow-reel.mp4" type="video/mp4">
-                    </video>
+                    <div class="click-event">
+                        <img src="images/engin-akyurt-yCYVV8-kQNM-unsplash.jpg">
+                    </div>
                     <div class="play-box">
                    
                     </div>
