--- a/index.html
+++ b/index.html
@@ -417,12 +417,8 @@
                 </div>
 
                 <div class="video" id="videoClass">
-                    <div class="click-event">
-                        <img src="images/engin-akyurt-yCYVV8-kQNM-unsplash.jpg">
-                    </div>
-                    <div class="play-box">
-                   
-                    </div>
+                        <img src="images/gallery.jpg">
+                    <div class="play-box"></div>
                 </div>
             </div>
         </section>
