TOggle button fAQ

--- a/index.html
+++ b/index.html
@@ -480,7 +480,84 @@
             <div class="FAQ">
                 <h2>Questions / Answers</h2>
 
-                
+
+                <div class="wrap-both-q-a">
+                    <div class="first-question">
+                        <h3>What if my cloths are heavily stained</h3>
+                        <i class="fa fa-plus"></i>
+                        <!-- <i class="fa fa-minus"></i> -->
+                    </div>
+
+                    <p class="first-answer">
+                        We try our best to remove the stains
+                        by adapting the best washing cycle, detergent,
+                        temperature suitable for the garment,
+                        however in case of tough stains,
+                        we would recommend
+                        you to use our stain removal or
+                        dry cleaning service.
+                    </p>
+                </div>
+
+                <div class="wrap-both-q-a">
+                    <div class="first-question">
+                        <h3>What if my cloths are heavily stained</h3>
+                        <i class="fa fa-plus"></i>
+                        <!-- <i class="fa fa-minus"></i> -->
+                    </div>
+
+                    <p class="first-answer">
+                        We try our best to remove the stains
+                        by adapting the best washing cycle, detergent,
+                        temperature suitable for the garment,
+                        however in case of tough stains,
+                        we would recommend
+                        you to use our stain removal or
+                        dry cleaning service.
+                    </p>
+                </div>
+
+
+                <div class="wrap-both-q-a">
+                    <div class="first-question">
+                        <h3>What if my cloths are heavily stained</h3>
+                        <i class="fa fa-plus"></i>
+                        <!-- <i class="fa fa-minus"></i> -->
+                    </div>
+
+                    <p class="first-answer">
+                        We try our best to remove the stains
+                        by adapting the best washing cycle, detergent,
+                        temperature suitable for the garment,
+                        however in case of tough stains,
+                        we would recommend
+                        you to use our stain removal or
+                        dry cleaning service.
+                    </p>
+                </div>
+
+
+                <div class="wrap-both-q-a">
+                    <div class="first-question">
+                        <h3>What if my cloths are heavily stained</h3>
+                        <i class="fa fa-plus"></i>
+                        <!-- <i class="fa fa-minus"></i> -->
+                    </div>
+
+                    <p class="first-answer">
+                        We try our best to remove the stains
+                        by adapting the best washing cycle, detergent,
+                        temperature suitable for the garment,
+                        however in case of tough stains,
+                        we would recommend
+                        you to use our stain removal or
+                        dry cleaning service.
+                    </p>
+                </div>
+
+
+
+
             </div>
         </div>
     </section>
