--- a/index.html
+++ b/index.html
@@ -500,13 +500,13 @@
                 </div>
 
                 <div class="wrap-both-q-a">
-                    <div class="first-question">
+                    <div class="first-question1">
                         <h3>What if my cloths are heavily stained</h3>
                         <i class="fa fa-plus"></i>
                         <!-- <i class="fa fa-minus"></i> -->
                     </div>
 
-                    <p class="first-answer">
+                    <p class="first-answer1">
                         We try our best to remove the stains
                         by adapting the best washing cycle, detergent,
                         temperature suitable for the garment,
@@ -519,13 +519,13 @@
 
 
                 <div class="wrap-both-q-a">
-                    <div class="first-question">
+                    <div class="first-question2">
                         <h3>What if my cloths are heavily stained</h3>
                         <i class="fa fa-plus"></i>
                         <!-- <i class="fa fa-minus"></i> -->
                     </div>
 
-                    <p class="first-answer">
+                    <p class="first-answer2">
                         We try our best to remove the stains
                         by adapting the best washing cycle, detergent,
                         temperature suitable for the garment,
@@ -538,13 +538,13 @@
 
 
                 <div class="wrap-both-q-a">
-                    <div class="first-question">
+                    <div class="first-question3">
                         <h3>What if my cloths are heavily stained</h3>
                         <i class="fa fa-plus"></i>
                         <!-- <i class="fa fa-minus"></i> -->
                     </div>
 
-                    <p class="first-answer">
+                    <p class="first-answer3">
                         We try our best to remove the stains
                         by adapting the best washing cycle, detergent,
                         temperature suitable for the garment,
