--- a/index.html
+++ b/index.html
@@ -424,9 +424,9 @@
                 <a href="https://youtu.be/TeE347fh_iM" target="_blank"><div class="play-box"></div></a> 
                 
                 <div class="videoPlayer" id="videoPlayer">
-                    <video  controls autoplay id="myVideo">
+                    <!-- <video  controls autoplay id="myVideo">
                         <source src="video/SHow-reel.mp4" type="video/mp4">
-                    </video>
+                    </video> -->
 
                     <img src="images/cancel.png" class="close-btn" onclick="stopVideo()">
                 </div>
