--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
 
                 <div class="wrap-both-q-a">
                     <div class="first-question">
-                        <h3>What if my cloths are heavily stained</h3>
+                        <h3>What if my cloths are heavily stained?</h3>
                         <i class="fa fa-plus"></i>
                         <!-- <i class="fa fa-minus"></i> -->
                     </div>
@@ -501,7 +501,9 @@
 
                 <div class="wrap-both-q-a">
                     <div class="first-question1">
-                        <h3>What if my cloths are heavily stained</h3>
+                        <h3>How long do you take to return the 
+                            garments?
+                        </h3>
                         <i class="fa fa-plus"></i>
                         <!-- <i class="fa fa-minus"></i> -->
                     </div>
@@ -520,7 +522,7 @@
 
                 <div class="wrap-both-q-a">
                     <div class="first-question2">
-                        <h3>What if my cloths are heavily stained</h3>
+                        <h3>How can i pay for the service?</h3>
                         <i class="fa fa-plus"></i>
                         <!-- <i class="fa fa-minus"></i> -->
                     </div>
@@ -539,7 +541,7 @@
 
                 <div class="wrap-both-q-a">
                     <div class="first-question3">
-                        <h3>What if my cloths are heavily stained</h3>
+                        <h3>What if i have complain about my garment?</h3>
                         <i class="fa fa-plus"></i>
                         <!-- <i class="fa fa-minus"></i> -->
                     </div>
