--- a/index.html
+++ b/index.html
@@ -485,7 +485,11 @@
                     <div class="first-question">
                         <h3>What if my cloths are heavily stained?</h3>
                         <i class="fa fa-plus"></i>
-                        <!-- <i class="fa fa-minus"></i> -->
+                        <!-- <div class="replace-plus">
+                            <span class="material-icons-outlined">
+                                remove
+                                </span>
+                        </div> -->
                     </div>
 
                     <p class="first-answer">
@@ -556,12 +560,18 @@
                         dry cleaning service.
                     </p>
                 </div>
-
-
-
-
             </div>
         </div>
+    </section>
+
+
+    <section class="container why-choose-us">
+        <!-- <div class="why-choose">
+            <h5>[ Affordable Prices ]</h5>
+            <h2>Our Dry Cleaning & Laundry Service</h2>
+        </div> -->
+
+        
     </section>
 
 
