--- a/index.html
+++ b/index.html
@@ -566,12 +566,32 @@
 
 
     <section class="container why-choose-us">
-        <!-- <div class="why-choose">
-            <h5>[ Affordable Prices ]</h5>
-            <h2>Our Dry Cleaning & Laundry Service</h2>
-        </div> -->
+        <div class="why-choose">
+            <h4>Why Choose Us</h4>
+            <p>We know that a strong, client-focused business is a smart business.
+                We have a 20,000-square-foot, state-of-the-art workshop where
+                all cleaning, specialized spot removal, pressing,
+                inspection and packaging of your items take place.
+            </p>
 
-        
+            <div class="value-experience">
+                <h4>Values & Experience</h4>
+                <p>We know that a strong, client-focused business is a smart business.
+                    We have a 20,000-square-foot, state-of-the-art workshop where
+                    all cleaning, specialized spot removal, pressing,
+                    inspection and packaging of your items take place.
+                </p>
+            </div>
+
+            <div class="note-on-Delivery">
+                <a href=""><button>Get Service Now</button></a>
+            </div>
+        </div>
+
+
+       
+
+
     </section>
 
 
