--- a/index.html
+++ b/index.html
@@ -587,12 +587,9 @@
                 <a href=""><button>Get Service Now</button></a>
             </div>
         </div>
-
-
-       
-
-
     </section>
+
+    <section class="hover-prize"></section>
 
 
 
