--- a/index.html
+++ b/index.html
@@ -589,7 +589,12 @@
         </div>
     </section>
 
-    <section class="hover-prize"></section>
+    <section class="hover-prize">
+        <p>Affordable Prizes</p>
+        <h3>Our Dry Cleaning & Prices </h3>
+        <h6>Our prices are simple and affordable which are easy on pocket
+            in comparison with the high street prices</h6>
+    </section>
 
 
 
