--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                 </div>
 
                 <div class="statement">
-                    <h4>Alternations & Repairs</h4>
+                    <h4>[ Alternations & Repairs ]</h4>
                     <p>We have expert seamstress and tailors  on staff to ensure
                         we meet and exceeds  your fitting requirements.
                     </p>
