--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
  rel="stylesheet">
 
  <!--=========STYLESHEETS========-->
+    <script src="https://kit.fontawesome.com/3d7d1de737.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="assets/css/googleicon.css">
@@ -594,6 +595,11 @@
         <h3>Our Dry Cleaning & Prices </h3>
         <h6>Our prices are simple and affordable which are easy on pocket
             in comparison with the high street prices</h6>
+
+
+        <div class="prize-carousel">
+            
+        </div>
     </section>
 
 
