--- a/index.html
+++ b/index.html
@@ -594,7 +594,8 @@
         <p>[ Affordable Prizes ]</p>
         <h3>Our Dry Cleaning & Prices </h3>
         <h6>Our prices are simple and affordable which are easy on pocket
-            in comparison with the high street prices</h6>
+            in comparison with the high street prices
+        </h6>
 
 
         <div class="prize-carousel">
