--- a/index.html
+++ b/index.html
@@ -599,7 +599,12 @@
 
 
         <div class="prize-carousel">
-            
+            <div class="price-tag-container">
+                <img src="images/towel.png" alt="">
+                <h2>Blanket Service</h2>
+                <p>Washed and Press</p>
+                <h5>$25.00</h5>
+            </div>
         </div>
     </section>
 
