Blanket and Price Tag

--- a/index.html
+++ b/index.html
@@ -598,12 +598,12 @@
         </h6>
 
 
-        <div class="prize-carousel">
-            <div class="price-tag-container">
-                <img src="images/towel.png" alt="">
+        <div class="prize-carousel"> 
+            <div class="price-tag-container"> <!---====BLANKET PRICE====-->
+                <img src="images/towel.png">
                 <h2>Blanket Service</h2>
                 <p>Washed and Press</p>
-                <h5>$25.00</h5>
+                <h4>$25.00</h4>
             </div>
         </div>
     </section>
