--- a/index.html
+++ b/index.html
@@ -605,6 +605,20 @@
                 <p>Washed and Press</p>
                 <h4>N5000</h4>
             </div>
+            
+            <div class="price-tag-container"> <!---====BLANKET PRICE====-->
+                <img src="images/towel.png">
+                <h2>Blanket Service</h2>
+                <p>Washed and Press</p>
+                <h4>N5000</h4>
+            </div>
+
+            <div class="price-tag-container"> <!---====BLANKET PRICE====-->
+                <img src="images/towel.png">
+                <h2>Blanket Service</h2>
+                <p>Washed and Press</p>
+                <h4>N5000</h4>
+            </div>
         </div>
     </section>
 
